# SnesToN64

./: README.md  build.sh
src/: CMakeLists.txt  main.c  snes_controller.c  snes_controller.h
